# cc-switchy

./: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
docs/design/: terminal-design-dna.json
docs/release-notes/: v0.4.0.md  v0.4.1.md
docs/superpowers/plans/: 2026-07-13-cc-switchy.md  2026-07-13-tui-interaction-repair.md  2026-07-14-backup-retention.md  2026-07-14-source-sync-status-repair.md  2026-07-23-v0.4.0-grok-tui.md
docs/superpowers/specs/: 2026-07-13-cc-switchy-design.md  2026-07-13-tui-interaction-repair-design.md  2026-07-14-backup-retention-design.md  2026-07-14-source-sync-status-design.md
resources/: gpt5_5_template.json
src/: cli.rs  error.rs  i18n.rs  lib.rs  main.rs  paths.rs  progress.rs
src/agent/: mcp.rs  mod.rs  model.rs  paths.rs  repository.rs  settings.rs  skills.rs
src/agent/provider/: additive.rs  claude.rs  claude_desktop.rs  codex.rs  gemini.rs  grok.rs  hermes.rs  mod.rs
src/commands/: mod.rs  sync.rs  tui.rs  wizard.rs
src/config/: catalog.rs  mod.rs  model.rs  store.rs
src/remote/: mod.rs  protocol.rs  s3.rs  webdav.rs
src/restore/: archive.rs  backup.rs  database.rs  mod.rs  schema.rs  service.rs
src/tui/: app.rs  event.rs  keymap.rs  mod.rs  view.rs  wizard.rs
tests/: agent_projection.rs  cli_first_run.rs  config_catalog.rs  local_database_compat.rs  protocol_compat.rs  readme_commands.rs  restore_transaction.rs  s3_sync.rs  sync_end_to_end.rs  tui_render.rs  webdav_sync.rs
tests/fixtures/cc-switch-v2/: README.md  db.sql  manifest.json
tests/fixtures/cc-switch-v2/skills/demo/: SKILL.md
