[package]
name = "cc-switchy"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cc-switchy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
hex = "0.4"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml = "0.9"
url = "2.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"
